# VFT-Manager-Template

./: README.md
extended-vft/: Cargo.toml
extended-vft/app/src/services/extended_vft/: funcs.rs  mod.rs
extended-vft/wasm/: build.rs
mini_dexs/: Cargo.toml
vft-manager/: Cargo.toml  README.md
vft-manager/app/: Cargo.toml
vft-manager/app/src/: lib.rs
vft-manager/app/src/services/: mod.rs  vft_manager_service.rs
vft-manager/app/src/states/: mod.rs  vft_manager_state.rs
vft-manager/wasm/: Cargo.toml  app.idl  app_client.rs  build.rs
