[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
sails-rs.workspace = true

# [dev-dependencies]
# app-client.path = "../wasm/app_client.rs"
# sails-rs = { workspace = true, features = ["gtest"] }
# gclient.workspace = true
# tokio.workspace = true