[package]
name = "application_builder"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
app = { path = "../app" }

[build-dependencies]
sails-idl-gen.workspace = true
sails-client-gen.workspace = true
sails-rs = { workspace = true, features = ["wasm-builder"] }
app = { path = "../app" }
